# fln

./: .env.example  .env.production.example  .gitignore  API.md  ARCHITECTURE.md  DATABASE.md  IMPLEMENTATION_PLAN.md  PRODUCT.md  README.md  SRS.md  SYSTEM_FLOW.md  UI_UX.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  vercel.json
.github/workflows/: android-apk.yml  ci.yml
FLN Levels Structure/Level 10_ Comparison – Numeral/: Level 10_ Comparison – Numeral.md
FLN Levels Structure/Level 11_ Review Assessment/: Level 11_ Review Assessment.md
FLN Levels Structure/Level 12_Tens and Ones/: Level 12_Tens and Ones.md
FLN Levels Structure/Level 13_ Numbers 11–30/: Level 13_ Numbers 11–30.md
FLN Levels Structure/Level 14_ Counting + Fun Trace/: Level 14_ Counting + Fun Trace.md
backend/: package.json
docker/: api.Dockerfile
docs/: DEPLOYMENT.md  INTEGRATED_WORKFLOW.md  OCR_PROVIDER.md  PRODUCTION_INPUTS.md  PRODUCTION_READINESS.md  README.md  REPO_STRUCTURE.md
frontend/: package.json
infra/: README.md
mvp/: package-lock.json  package.json
scripts/: dev.mjs
services/model/: MODEL_PIPELINE.md  README.md  pyproject.toml
services/model/app/: main.py
services/model/app/contracts/: full_scan.schema.json  sample_request.json  sample_response.json
services/model/app/pipeline/: evaluator.py  preprocess.py  recognition.py  roi.py  scoring.py  templates.py  vision.py
services/model/templates/: demo-paper.json
services/model/tests/: test_contract.py  test_pipeline.py
templates/: README.md
(+142 files in other folders)
